# quickmatch

./: .gitignore  Cargo.toml  LICENSE  README.md  jsconfig.json  package.json
.github/workflows/: outdated.yml
docs/: CHANGELOG.md  README.md
examples/: autocomplete.rs  colon_test.mjs  colon_test.rs  compare.rs
src/: config.rs  index.js  lib.rs
