[package]
name = "quickmatch"
description = "Lightning-fast fuzzy string matching with hybrid word and trigram indexing"
version = "0.3.1"
license = "MIT"
edition = "2024"
repository = "https://github.com/nym21/quickmatch"
keywords = ["search", "fuzzy", "matching", "trigram", "autocomplete"]
categories = ["algorithms", "text-processing", "data-structures"]

[dependencies]
rustc-hash = "2.1.1"
